# notes-and-edu

./: .gitattributes  .gitignore  README.md  gameplan.md  index.md  quartz.config.ts  quartz.layout.ts
.obsidian/: graph.json  workspace.json
calculus-spring-2024/: Ответы на экзамен.md
calculus-spring-2024/coursework/: 1_РязанцевДЛ_Пояснительная записка.docx  coursework.m  ~$РязанцевДЛ_Пояснительная записка.docx
calculus-spring-2024/labs/: RyazancevDL_3_1.m  RyazancevDL_5_1.m
content/: index.md
content/.obsidian/: app.json  community-plugins.json  graph.json  workspace.json
content/C++/: Заметки по C++.md
content/matlab-helpers/: parse_csv_microcap_output.m
content/Высшая математика (весна 2023)/: Вопросы к экзамену.md  Высшая математика.md  Ответы на вопросы к экзамену.md
content/Вычислительная математика (весна 2024)/: Ответы на экзамен.md
content/Иностранный язык (весна 2024)/: Монолог.md
content/Моделирование информационных систем (осень 2024)/: 1_РязанцевДЛ.docx
content/Научная графика (весна 2024)/: Научная графика.md
content/ППП (весна 2024)/labs/2/: CMakeLists.txt
ddmp-fall-2023/: lab-admission.md
english-spring-2024/: unit-3.md
hm-fall-2023/: overview.md  solutions.md
matlab-helpers/: read_signal.m
programming-workshop-spring-2024/: gameplan.md  Практикум по программированию.md
python/practics/: fifth.py  (+1 more)
scientific-graphics-spring-2024/: index.md
Высшая математика (весна 2023)/: overview.md  Высшая математика.md
Практикум по программированию (весна 2024)/: Практикум по программированию.md
ЦУиМП (осень 2023)/: ЦУиМП.md
(+151 files in other folders)
